chore: rename containers and network

--- a/.env_sample
+++ b/.env_sample
@@ -14,12 +14,12 @@ LOCAL_STORAGE=.
 DOCROOT=.
 
 # Dataverse database settings
-DATAVERSE_DB_HOST=postgres
+DATAVERSE_DB_HOST=postgres-dataverse-stu
 DATAVERSE_DB_USER=dataverse
 DATAVERSE_DB_PASSWORD=dvnsecret
 DATAVERSE_DB_NAME=dataverse
 
-SOLR_SERVICE_HOST=solr:8983
+SOLR_SERVICE_HOST=solr-dataverse-stu:8983
 SOLR_SERVICE_PORT=8983
 DATAVERSE_URL=localhost:8080
 DATAVERSE_SERVICE_HOST=localhost
@@ -27,7 +27,7 @@ DATAVERSE_SERVICE_HOST=localhost
 # Postgres settings
 POSTGRES_USER=dataverse
 POSTGRES_PASSWORD=dvnsecret
-POSTGRES_SERVER=postgres
+POSTGRES_SERVER=postgres-dataverse-stu
 POSTGRES_DATABASE=dataverse
 POSTGRES_DB=dataverse
 
