--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,15 +2,14 @@ version: '3.7'
 # Settings and configurations that are common for all containers
 
 services:
-    postgres-fiit-stu:
+    postgres-dataverse-stu:
       networks:
-        - traefik-fiit-stu
-      container_name: postgres-fiit-stu
+        - dataverse-stu
+      container_name: postgres-dataverse-stu
       ports:
         - "5433:5432"
       image: postgres:10.13
       restart: unless-stopped
-
       environment:
         - "LC_ALL=C.UTF-8"
         - "POSTGRES_DB"
@@ -21,16 +20,16 @@ services:
         - ${LOCAL_STORAGE}/database-data:/var/lib/postgresql/data/ # persist data even if container shuts down
         - ./triggers:/triggers
 
-    solr-fiit-stu:
+    solr-dataverse-stu:
       networks:
-        - traefik-fiit-stu
+        - dataverse-stu
       image: coronawhy/solr:8.9.0
-      container_name: solr-fiit-stu
+      container_name: solr-dataverse-stu
       privileged: true
       ports:
         - "8983:8983"
       environment:
-        - "SOLR_HOST=solr-fiit-stu"
+        - "SOLR_HOST=solr-dataverse-stu"
         - "SOLR_PORT=8983"
         - "SOLR_JAVA_MEM=-Xms1g -Xmx1g"
         - "SOLR_OPTS=-Dlog4j2.formatMsgNoLookups=true"
@@ -38,11 +37,11 @@ services:
         - solr-data:/opt/solr/server/solr/collection1/data
         - ./config/schema.xml:/var/solr/data/collection1/conf/schema.xml
     
-    dataverse-fiit-stu:
+    dataverse-app-stu:
       networks:
-        - traefik-fiit-stu
+        - dataverse-stu
       image: ${DOCKER_HUB}:${VERSION}
-      container_name: dataverse-fiit-stu
+      container_name: dataverse-app-stu
       privileged: true
       user:
         "root"
@@ -88,13 +87,12 @@ services:
         - "DATAVERSE_URL"
         - "SOLR_SERVICE_HOST"
         - "SOLR_SERVICE_PORT"
-        - "CVM_SERVER_URL=https://ns.${traefikhost}"
         - "LANG=en"
         - "cvManager=http://"
         - "BUNDLEPROPERTIES=Bundle.properties"
         - "ADMIN_EMAIL=admin@localhost"
         - "MAIL_SERVER=mailrelay"
-        - "SOLR_LOCATION=solr-fiit-stu:8983"
+        - "SOLR_LOCATION=solr-dataverse-stu:8983"
         - "INIT_SCRIPTS_FOLDER"
         - "hostname"
         - "MAINLANG"
@@ -111,8 +109,8 @@ services:
         - "RSERVE_PASSWORD=rserve"
         - "JVM_OPTS='-Xmx1g -Xms1g -XX:MaxPermSize=2g -XX:PermSize=2g'"
       depends_on:
-        - postgres-fiit-stu
-        - solr-fiit-stu
+        - postgres-dataverse-stu
+        - solr-dataverse-stu
       volumes:
         - ${CONFIGURATION_PATH}/secrets:/secrets
         - ${LOCAL_STORAGE}/data:/data
@@ -135,5 +133,5 @@ volumes:
   data4-2:
 
 networks:
-  traefik-fiit-stu:
+  dataverse-stu:
     external: true
